Removed 1000 games runner from start to an explain button

--- a/main.css
+++ b/main.css
@@ -42,3 +42,10 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+#batonExplain {
+    width: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
